--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.1.3'
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
-    //id 'io.realm.kotlin' version '1.6.0' apply false
+    id 'com.android.application' version '8.1.3' apply false
+    id 'com.android.library' version '8.1.3' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.0' apply false
+    id 'io.realm.kotlin' version '1.12.0' apply false
 }
 
 task clean(type: Delete) {
