--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
     // Splashscreen
     implementation 'androidx.core:core-splashscreen:1.0.1'
     //Dagger
@@ -66,8 +67,6 @@ dependencies {
     //Realm
     implementation 'io.realm.kotlin:library-base:1.12.0'
     implementation 'io.realm:realm-annotations:10.17.0'
-    //WorkManager
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
