--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,15 +48,15 @@ dependencies {
     // Splashscreen
     implementation 'androidx.core:core-splashscreen:1.0.1'
     //Dagger
-    implementation 'com.google.dagger:dagger:2.48.1'
-    kapt 'com.google.dagger:dagger-compiler:2.48.1'
+    implementation 'com.google.dagger:dagger:2.49'
+    kapt 'com.google.dagger:dagger-compiler:2.49'
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
     // Glide
-    implementation 'com.github.bumptech.glide:glide:4.15.1'
-    kapt 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    kapt 'com.github.bumptech.glide:compiler:4.16.0'
     //Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
@@ -65,7 +65,7 @@ dependencies {
     // pull-to-refresh
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     //Realm
-    implementation 'io.realm.kotlin:library-base:1.12.0'
+    implementation 'io.realm.kotlin:library-base:1.13.0'
     implementation 'io.realm:realm-annotations:10.17.0'
 
     testImplementation 'junit:junit:4.13.2'
