--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -15,11 +15,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FlickrRecent.Starting"
-        tools:targetApi="31">
+        android:theme="@style/Theme.FlickrRecent"
+        tools:targetApi="31" >
 
         <activity
-            android:name=".presentation.ui.MainActivity"
+            android:name=".presentation.ui.SplashActivity"
+            android:theme="@style/Theme.Transparent"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +29,19 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".presentation.ui.MainActivity"
+            android:theme="@style/Theme.FlickrRecent" >
+        </activity>
+
+        <!-- <activity -->
+        <!-- android:name=".presentation.ui.MainActivity" -->
+        <!-- android:exported="true"> -->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
         <receiver
             android:name=".presentation.ui.utils.AlarmReceiver"
             android:enabled="true"
